modify interface annotation
