# controllers/book.go
@@ -12,26 +12,26 @@ type BookController struct {
 	beego.Controller
 }
 
-// @Title Create Book
-// @Description 创建一个新的 Book
-// @Param	body	body	bean.Book	true	"针对 Book 的 Post 请求 Body"
+// @Title 创建 book
+// @Description 创建一个新的 book
+// @Param	body	body	bean.Book	true	"针对 book 的 post 请求 body"
 // @Success 200 {int} bean.Book.id
-// @Failure 403 Body 为空
+// @Failure 403 body 为空
 // @router / [post]
 func (b *BookController) PostBook() {
 	var book bean.Book
 	json.Unmarshal(b.Ctx.Input.RequestBody, &book)
 	bid, err := models.AddBook(book)
 	if err == nil {
-		b.Data["json"] = bean.ResultVO{true, "Add user success", map[string]interface{}{"bid": bid}}
+		b.Data["json"] = bean.ResultVO{true, "Add user success.", map[string]interface{}{"bid": bid}}
 	} else {
 		b.Data["json"] = bean.ResultVO{false, err.Error(), ""}
 	}
 	b.ServeJSON()
 }
 
-// @Title Get all books
-// @Description 获取所有 Book 列表
+// @Title 获取所有 book
+// @Description 获取所有 book 列表
 // @Success 200 {object} bean.Book
 // @router / [get]
 func (b *BookController) GetAllBook() {
@@ -40,8 +40,8 @@ func (b *BookController) GetAllBook() {
 	b.ServeJSON()
 }
 
-// @Title GetBook by Id
-// @Description 根据 id 获取 Book
+// @Title 获取指定 Book
+// @Description 根据 id 获取指定 book
 // @Param	bid	path	int	true	"根据 path 的 id 获取 book 信息"
 // @Success 200 {object} bean.Book
 // @Failure 403 bid is not int
@@ -61,10 +61,10 @@ func (b *BookController) GetBook() {
 	b.ServeJSON()
 }
 
-// @Title Update book by id
-// @Description 根据 id 更新 book
-// @Param	bid	path	int true	"根据 Path 的 id 更新 Book 信息"
-// @Param	body	body	bean.Book	true	"针对 Book 的 Put 请求 Body"
+// @Title 更新指定 book
+// @Description 根据 id 更新指定 book
+// @Param	bid	path	int true	"根据 path 的 id 更新 book 信息"
+// @Param	body	body	bean.Book	true	"针对 book 的 put 请求 body"
 // @Success 200 {object} bean.Book
 // @Failure 403 bid is not int
 // @router /:bid [put]
@@ -75,7 +75,7 @@ func (b *BookController) UpdateBook() {
 		json.Unmarshal(b.Ctx.Input.RequestBody, &book)
 		err := models.UpdateBookById(bid, book)
 		if err == nil {
-			b.Data["json"] = bean.ResultVO{true, "Update book success", book}
+			b.Data["json"] = bean.ResultVO{true, "Update book success.", book}
 		} else {
 			b.Data["json"] = bean.ResultVO{false, err.Error(), ""}
 		}
@@ -85,9 +85,9 @@ func (b *BookController) UpdateBook() {
 	b.ServeJSON()
 }
 
-// @Title Delete book
+// @Title 删除 book
 // @Description 根据 id 删除 book
-// @Param	bid	path	int	true	"根据 Path 的 id 删除 Book 信息"
+// @Param	bid	path	int	true	"根据 path 的 id 删除 book 信息"
 // @Success 200 string delete success
 // @Failure 403 bid is not int
 // @router /:bid [delete]
@@ -96,7 +96,7 @@ func (b *BookController) DeleteBook() {
 	if err == nil && bid != 0 {
 		err := models.DeleteBookById(bid)
 		if err == nil {
-			b.Data["json"] = bean.ResultVO{true, "Delete book success", ""}
+			b.Data["json"] = bean.ResultVO{true, "Delete book success.", ""}
 		} else {
 			b.Data["json"] = bean.ResultVO{false, err.Error(), ""}
 		}
