# swagger/swagger.json
@@ -15,8 +15,8 @@
                 "tags": [
                     "book"
                 ],
-                "description": "获取所有 Book 列表",
-                "operationId": "BookController.Get all books",
+                "description": "获取所有 book 列表",
+                "operationId": "BookController.获取所有 book",
                 "responses": {
                     "200": {
                         "description": "",
@@ -30,13 +30,13 @@
                 "tags": [
                     "book"
                 ],
-                "description": "创建一个新的 Book",
-                "operationId": "BookController.Create Book",
+                "description": "创建一个新的 book",
+                "operationId": "BookController.创建 book",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "针对 Book 的 Post 请求 Body",
+                        "description": "针对 book 的 post 请求 body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/bean.Book"
@@ -48,7 +48,7 @@
                         "description": "{int} bean.Book.id"
                     },
                     "403": {
-                        "description": "Body 为空"
+                        "description": "body 为空"
                     }
                 }
             }
@@ -58,8 +58,8 @@
                 "tags": [
                     "book"
                 ],
-                "description": "根据 id 获取 Book",
-                "operationId": "BookController.GetBook by Id",
+                "description": "根据 id 获取指定 book",
+                "operationId": "BookController.获取指定 Book",
                 "parameters": [
                     {
                         "in": "path",
@@ -86,13 +86,13 @@
                 "tags": [
                     "book"
                 ],
-                "description": "根据 id 更新 book",
-                "operationId": "BookController.Update book by id",
+                "description": "根据 id 更新指定 book",
+                "operationId": "BookController.更新指定 book",
                 "parameters": [
                     {
                         "in": "path",
                         "name": "bid",
-                        "description": "根据 Path 的 id 更新 Book 信息",
+                        "description": "根据 path 的 id 更新 book 信息",
                         "required": true,
                         "type": "integer",
                         "format": "int64"
@@ -100,7 +100,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "针对 Book 的 Put 请求 Body",
+                        "description": "针对 book 的 put 请求 body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/bean.Book"
@@ -124,12 +124,12 @@
                     "book"
                 ],
                 "description": "根据 id 删除 book",
-                "operationId": "BookController.Delete book",
+                "operationId": "BookController.删除 book",
                 "parameters": [
                     {
                         "in": "path",
                         "name": "bid",
-                        "description": "根据 Path 的 id 删除 Book 信息",
+                        "description": "根据 path 的 id 删除 book 信息",
                         "required": true,
                         "type": "integer",
                         "format": "int64"
@@ -150,8 +150,8 @@
                 "tags": [
                     "user"
                 ],
-                "description": "获取所有的 User 列表",
-                "operationId": "UserController.获取 User 列表",
+                "description": "获取所有的 user 列表",
+                "operationId": "UserController.获取 user 列表",
                 "responses": {
                     "200": {
                         "description": "",
@@ -165,13 +165,13 @@
                 "tags": [
                     "user"
                 ],
-                "description": "增加一个新的 User 操作",
-                "operationId": "UserController.增加 User",
+                "description": "增加一个新的 user 操作",
+                "operationId": "UserController.增加 user",
                 "parameters": [
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "针对 User 的 Post 请求 Body",
+                        "description": "针对 user 的 post 请求 body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/bean.UserProfile"
@@ -193,7 +193,7 @@
                 "tags": [
                     "user"
                 ],
-                "description": "根据用户名和密码登录",
+                "description": "根据用户名和密码验证登录",
                 "operationId": "UserController.登录",
                 "parameters": [
                     {
@@ -224,7 +224,7 @@
                 "tags": [
                     "user"
                 ],
-                "description": "根据用户名和密码登录",
+                "description": "根据用户名和密码验证登录",
                 "operationId": "UserController.登录",
                 "parameters": [
                     {
@@ -257,8 +257,8 @@
                 "tags": [
                     "user"
                 ],
-                "description": "根据 uid 获取 User",
-                "operationId": "UserController.获取 User",
+                "description": "根据 uid 获取 user",
+                "operationId": "UserController.获取 user",
                 "parameters": [
                     {
                         "in": "path",
@@ -285,8 +285,8 @@
                 "tags": [
                     "user"
                 ],
-                "description": "根据 uid 更新 User \u0026 Profile",
-                "operationId": "UserController.更新 User",
+                "description": "根据 uid 更新 user \u0026 profile",
+                "operationId": "UserController.更新 user",
                 "parameters": [
                     {
                         "in": "path",
@@ -299,7 +299,7 @@
                     {
                         "in": "body",
                         "name": "body",
-                        "description": "针对 User 的 Put 请求 Body",
+                        "description": "针对 user 的 put 请求 body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/bean.UserProfile"
@@ -322,8 +322,8 @@
                 "tags": [
                     "user"
                 ],
-                "description": "根据 uid 删除 User，逻辑删除",
-                "operationId": "UserController.删除 User",
+                "description": "根据 uid 删除 user，逻辑删除",
+                "operationId": "UserController.删除 user",
                 "parameters": [
                     {
                         "in": "path",
